--- a/Practica No.3 Propuestas de FrontEnd/login.html
+++ b/Practica No.3 Propuestas de FrontEnd/login.html
@@ -7,11 +7,10 @@
   </head>
   <body>
     <section class="form-login">
-      <h6>Formulario Login</h6>
-      <input class="controls" type="text" name="usuario" value="" placeholder="Usuario">
+      <h5>Sistema de la salud</h5>
+      <input class="controls" type="text" name="usuario" value="" placeholder="Ingrese su RFC">
       <input class="controls" type="password" name="contrasena" value="" placeholder="Contraseña">
       <input class="buttons" type="submit" name="" value="Ingresar">
-
       <p><a href="#">¿Olvidastes tu Contraseña?</a></p>
 
     </section>
