--- a/Practica No.3 Propuestas de FrontEnd/pacientes/expediente.html
+++ b/Practica No.3 Propuestas de FrontEnd/pacientes/expediente.html
@@ -184,7 +184,7 @@
 <body >
 
     <header>
-        <h1>Consultorio Médico</h1>
+        <h1>Sistema de la salud</h1>
     </header>
     
     <nav class="main-navigation">
