--- a/Practica No.3 Propuestas de FrontEnd/pacientes/busqueda_paciente.html
+++ b/Practica No.3 Propuestas de FrontEnd/pacientes/busqueda_paciente.html
@@ -114,7 +114,7 @@
 </head>
 <body>
     <header>
-        <h1>Consultorio Médico</h1>
+        <h1>Sistema de la salud</h1>
     </header>
     
     <nav class="main-navigation">
